<resources>
    <string name="app_name">QuizApp</string>
    <string name="quiz_app">Quiz App</string>
    <string name="name">Name</string>
    <string name="please_enter_your_name">Please Enter your name.</string>
    <string name="quiz_image">Quiz image</string>
    <string name="submit">SUBMIT</string>
    <string name="welcome">Welcome</string>
    <string name="start">START</string>
</resources>